# scanbot

./: .gitignore  404.html  README.md  ScanbotInterface.py  data_upload_tool.py  global_.py  google-analytics.js  index.html  mkdocs.yml  nanonisUtils.py  paper.bib  paper.md  pyproject.toml  scanbot.py  scanbot_config.ini  scanbot_interface.py  scanbot_old.py  scanbot_test.py  setup.py  sitemap.xml  utilities.py
.github/workflows/: windows-install.yml
about/: index.html
automation/: index.html
commands/: index.html
configuration/: index.html
contact/: index.html
contributing/: index.html
docs/: about.md  automation.md  commands.md  configuration.md  contact.md  featured.md  google-analytics.js  gui.md  hooks.md  index.md  web-app-test.md  web-app.md
featured/: index.html
gui/: index.html
hooks/: index.html
scanbot/: global_.py  package-lock.json  package.json  panel.py  scanbot.py  scanbot_interface.py  utilities.py
scanbot/App/src/: BiasDep.js  Components.js  Configuration.js  QuickAccess.js  Scanbot.js  Validations.js  index.js
scanbot/App/src/styles/: Survey.css
scanbot/server/: __init__.py  nanonispyfit.py  scanbot.py  scanbot_config.py  scanbot_interface.py  server.py  test_server.py  utilities.py
scanbot/src/: BiasDep.js  Components.js  DataAcquisition.js  STMControl.js  Scanbot.js  Survey.js  Validations.js  Webcam.js
scanbot/src/styles/: Components.css  Configuration.css  STMControl.css  Scanbot.css  Survey.css
server/: panel.py  scanbot.py  scanbot_config.py  scanbot_interface.py  server.py  utilities.py
web-app/: index.html
web-app-test/: index.html
